@@ -1,3 +1,8 @@
+2007-08-16  Vin Shelton  <acs@xemacs.org>
+
+	* font-lock.el: Add defvar for font-lock-warning-face.  Original
+	patch from Hans de Graaff.
+
 2007-08-18  Adrian Aichner  <adrian@xemacs.org>
 
 	* package-get.el (package-get-download-sites): Update mirror sites.
